--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
 		"name": "Seanghay Yath",
 		"url": "https://github.com/seanghay"
 	},
-	"files": [
-		"dist"
-	],
+	"repository": "seanghay/objectcipher",
+	"files": ["dist"],
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
